# ML_PM

./: create_env.sh  main.ipynb  pyproject.toml  requirements.txt
TITRE.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nbs/: main.ipynb  second paper.ipynb
skfin/: datasets_.py  mv_estimators.py  plot.py
skfin/dataloaders/: loaders.py
